# chess-latent-variable-models

./: .gitignore  LICENSE  README.md  pyproject.toml
src/morfi/: parsing.py
